--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "firebase": "^11.3.1",
+    "firebase-admin": "^13.1.0",
+    "firebase-functions": "^6.3.2",
     "firebase-tools": "^13.31.2",
     "next": "15.2.0",
     "react": "^19.0.0",
